Port to wasm/emscripten

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,22 @@ endif()
 
 project(EWRender)
 
+set (CMAKE_CXX_STANDARD 17)
+
+if (${CMAKE_SYSTEM_NAME} STREQUAL "Emscripten")
+    option(BUILD_HTML "Build html also!" ON)
+    set(EMSCRIPTEN TURE)
+    set(CMAKE_FIND_ROOT_PATH_MODE_PACKAGE BOTH)
+    set(CMAKE_TOOLCHAIN_FILE "${EMSCRIPTEN_ROOT_PATH}/cmake/Modules/Platform/Emscripten.cmake")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Oz -s WASM=2 -s USE_SDL=0 -s ASYNCIFY -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -s FULL_ES3=1 -s USE_GLFW=3")
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Oz -s WASM=2 -s USE_SDL=0 -s ASYNCIFY -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -s FULL_ES3=1 -s USE_GLFW=3")
+    file(GLOB HTML "${CMAKE_CURRENT_SOURCE_DIR}/html/*")
+    file(COPY ${HTML} DESTINATION ${CMAKE_BINARY_DIR}/bin/)
+
+    #Prevent linking windows libraries
+    set(CMAKE_CXX_STANDARD_LIBRARIES "")
+endif()
+
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
