--- a/CMakeSettings.json
+++ b/CMakeSettings.json
@@ -10,6 +10,29 @@
       "cmakeCommandArgs": "",
       "buildCommandArgs": "",
       "ctestCommandArgs": ""
+    },
+    {
+      "name": "x64-Debug-WASM",
+      "generator": "Ninja",
+      "configurationType": "Debug",
+      "inheritEnvironments": [ "msvc_x64_x64" ],
+      "buildRoot": "${projectDir}\\out\\build\\${name}",
+      "installRoot": "${projectDir}\\out\\install\\${name}",
+      "buildCommandArgs": "-v",
+      "ctestCommandArgs": "",
+      "cmakeToolchain": "C:\\emsdk\\upstream\\emscripten\\cmake\\Modules\\Platform\\Emscripten.cmake",
+      "variables": [
+        {
+          "name": "CMAKE_C_COMPILER",
+          "value": "C:\\emsdk\\upstream\\emscripten\\emcc.bat",
+          "type": "FILEPATH"
+        },
+        {
+          "name": "CMAKE_CXX_COMPILER",
+          "value": "C:\\emsdk\\upstream\\emscripten\\em++.bat",
+          "type": "FILEPATH"
+        }
+      ]
     }
   ]
 }
